Fix layout error on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -174,7 +174,6 @@ h1 {
   margin: 10px;
   min-width: 300px;
   height: auto;
-  aspect-ratio: 1280/960;
 }
 
 .about-inner {
@@ -249,6 +248,15 @@ h1 {
   #projects img {
     min-width: 300px;
     height: auto;
+  }
+
+  #home h1 {
+    max-width: 100%;
+    text-align: center;
+  }
+
+  #home span {
+    display: block;
   }
 
   h1 {
